--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <body>
-        <div class="up-text">
-            kubuss++#3454
-        </div>
-        <div class="down-text">
-            I Know: Java,Python,Html,Css,PHP,JS
-        </div>
-        <div class="dicsord">
-            <a href="https://lookup.guru/1020797362219790427"><button type = 'button' class="btn" >Contact</button></a>
-        </div>
-        <div class="github">
-            <a href="https://github.com/kubuss000"><button type = 'button' class="btn" >Github</button></a>
+        <div class="container">
+            <div class="up-text">
+                kubuss++#3454
+            </div>
+            <div class="down-text">
+                I Know: Java,Python,Html,Css,PHP,JS
+            </div>
+            <div class="dicsord">
+                <a href="https://lookup.guru/1020797362219790427"><button type = 'button' class="btn" >Contact</button></a>
+            </div>
+            <div class="github">
+                <a href="https://github.com/kubuss000"><button type = 'button' class="btn" >Github</button></a>
+            </div>
         </div>
     </body>
     </html>
