--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn.discordapp.com/avatars/1020797362219790427/157e517cdbf371a47aaead44675714a3.png?size=1024" />
-    <title>kubuss++</title>
+    <title>kubusswow</title>
 </head>
 <body>
     <body>
         <div class="container">
             <div class="up-text">
-                kubuss++#3454
+                kubusswow#2585
             </div>
             <div class="down-text">
                 I Know: Java,Python,Html,Css,PHP,JS
             </div>
             <div class="dicsord">
-                <a href="https://lookup.guru/1020797362219790427"><button type = 'button' class="btn" >Contact</button></a>
+                <a href="https://lookup.guru/801807264049790996"><button type = 'button' class="btn" >Contact</button></a>
             </div>
             <div class="github">
                 <a href="https://github.com/kubuss000"><button type = 'button' class="btn" >Github</button></a>
