--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn.discordapp.com/avatars/801807264049790996/3c0f8d37ccdf8b9914dea3fe3cadacfe.png?size=1024" />
-    <title>kubusswow</title>
+    <title>kubuss1997</title>
 </head>
 <body>
     <body>
         <div class="container">
             <div class="up-text">
-                kubusswow#2585
+                kubuss1997
             </div>
             <div class="down-text">
-                I Know: Java,Python,Html,Css,PHP,JS
+                Java,Python,Html,Css,PHP,JS
             </div>
             <div class="dicsord">
                 <a href="https://lookup.guru/801807264049790996"><button type = 'button' class="btn" >Contact</button></a>
